Pin ZMK to pre-Zephyr 4.1 version
ZMK updated to Zephyr 4.1 on Dec 9, 2025, which requires board
definitions to be migrated to Hardware Model V2 (HWMv2). Pinning
to last commit before the update until boards are migrated.

--- a/config/west.yml
+++ b/config/west.yml
@@ -17,7 +17,7 @@ manifest:
       revision: main
     - name: zmk
       remote: zmkfirmware
-      revision: main
+      revision: f35552cbb46f06604c19d2ec2f8d63cbdc9a5cc2
       import: app/west.yml
   self:
     path: boards
