--- a/config/west.yml
+++ b/config/west.yml
@@ -9,15 +9,15 @@ manifest:
   #  - name: gpeye
   #    url-base: https://github.com/GPeye
   projects:
-   # - name: mario-peripheral-animation
-   #   remote: gpeye
-   #    revision: main 
+    # - name: mario-peripheral-animation
+    #   remote: gpeye
+    #    revision: main
     - name: eyelash_sofle
       url: https://github.com/a741725193/zmk-sofle
       revision: main
     - name: zmk
       remote: zmkfirmware
-      revision: f35552cbb46f06604c19d2ec2f8d63cbdc9a5cc2
+      revision: v0.3.0
       import: app/west.yml
   self:
     path: boards
